      (fragment_size_threshold option in GUI; UD_FRAGMENT_SIZE_THRESHOLD
      environment variable in command line tool and boot time interface)
    - ability to tune the disk optimization by UD_OPTIMIZER_SIZELIMIT
      environment variable (optimizer_sizelimit parameter in GUI) was added
    - MFT optimization was forced to do nothing silently on non-NTFS disks


  Version 5.0.1  2012-01-08
  ------------------------------------------------------------------------------
    - few important bugs in disk processing routines were fixed
    - few bugs in MFT optimizer were fixed
    - one bug causing boot time interface freeze 
      after "Good bye..." message was fixed
    - the following translations were updated:

      Finnish, Indonesian, Italian

    - some additions to the tips, FAQ and GUI sections of the documentation


  Version 5.0.0  2011-12-31
  ------------------------------------------------------------------------------
    - the following translations were added:

      Kapampangan, Georgian

    - the following translations were updated:

      Italian, Polish, Swedish, Burmese (Padauk), Finnish, Japanese

    RC2:
    - ability to defragment NTFS attribute lists was added
    - check for the volume dirty flag was added to the volume analysis
    - ability to select all disks by pressing Ctrl+A was added to GUI
    - ability to analyze disk by pressing Enter or double-clicking on
      the list row was added to GUI
    - the following translations were updated:

      Japanese, Korean, Italian, Iloko, Czech, Slovak, Portuguese (BR),
      Romanian, Filipino (Tagalog), Catalan, Spanish (ES), Hungarian,
      Farsi, Yiddish

    - installer has been enhanced in the following ways:
      + usage tracking can be enabled/disabled
        during silent installations using the /S switch:
            * /DISABLE_USAGE_TRACKING ... enable/disable usage tracking
                                          through the web